Update AI and Diary Page